21 June 2008

* Strip padding out of terminfo(5) strings. Currently the padding is just
  ignored, this may need to be altered if there are any software terminals
  out there that actually need it.

20 June 2008

* buffer-limit option to set maximum size of buffer stack. Default is 9.
* Initial buffer improvements. Each session has a stack of buffers and each
  buffer command takes a -b option to manipulate items on the stack. If -b
  is omitted, the top entry is used. The following commands are currently 
  available:

	set-buffer [-b index] [-t target-session] string
	paste-buffer [-d] [-b index] [-t target-window]
	delete-buffer [-b index] [-t target-session]
	show-buffers [-t target-session]

  -d to paste-buffer deletes the buffer after pasting it.
* New option, display-time, sets the time status line messages stay on screen
  (unless a key is pressed). Set in milliseconds, default is 750 (0.75 seconds).
  The timer is only checked every 100 ms or so.

19 June 2008

* Use "status" consistently for status line option, and prefix for "prefix" key
  option.
* Allow commands to be entered at a prompt. This is triggered with the
  command-prompt command, bound to : by default.
* Show status messages properly, without blocking the server.

18 June 2008

* New option, set-titles. On by default, this attempts to set the window title
  using the \e]2;...\007 xterm code. 
  
  Note that elinks requires the STY environment variable (used by screen) to be
  set before it will set the window title. So, if you want window titles set by 
  elinks, set STY before running it (any value will do). I can't do this for all
  windows since setting it to an invalid value breaks screen. Why they couldn't
  just look for TERM=screen (or send it regardless if the user turned it on) is
  beyond me.
* Show arrows at either end of status line when scrolled if more windows
  exist. Highlight the arrow if a hidden window has activity or bell.